--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
     </div>
 
     <!-- Call-to-Action Section -->
-    <div id="cta">
+    <!-- <div id="cta">
         <div class="container text-center">
             <a href="#" class="btn go-to-btn">Check our shop</a>
         </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Section -->
     <div id="works">
@@ -264,14 +264,14 @@
         </div>
         <div class="space"></div>
         <div class="text-center">
-            <a href="#" class="btn read-more-btn">Check on Dribbble</a>
+            <!-- <a href="#" class="btn read-more-btn">Check on Dribbble</a> -->
             <br>
             <a href="#about-us" class="down-btn page-scroll"><span class="fa fa-angle-down"></span></a>
         </div>
     </div>
 
     <!-- Clients Section -->
-    <div id="clients">
+    <!-- <div id="clients">
         <div class="overlay">
             <div class="container text-center">
                 <div class="section-title">
@@ -287,7 +287,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- About Us Section -->
     <div id="about-us">
@@ -362,7 +362,7 @@
     </div>
 
     <!-- Testimonial Section -->
-    <div id="testimonials">
+    <!-- <div id="testimonials">
         <div class="overlay">
             <div class="container">
                 <div class="section-title">
@@ -395,7 +395,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Contact Section -->
     <div id="contact">
@@ -449,8 +449,7 @@
     <nav id="footer">
         <div class="container">
             <div class="pull-left">
-                <p>2014 © Arcadia. All Rights Reserved. Coded by <a href="https://dribbble.com/jennpereira">Jenn</a> &
-                    Designed by <a href="https://dribbble.com/alanpodemski">Alan</a></p>
+                <p>2020 © M-Dev. All Rights Reserved.</p>
             </div>
             <div class="pull-right">
                 <a href="#home" class="page-scroll">Back to Top <span class="fa fa-angle-up"></span></a>
