--- a/index.html
+++ b/index.html
@@ -53,32 +53,32 @@
 
     <!-- Off Canvas Navigation
     ================================================== -->
-    <div class="navmenu navmenu-default navmenu-fixed-left offcanvas">
-        <!--- Off Canvas Side Menu -->
-        <div class="close" data-toggle="offcanvas" data-target=".navmenu">
+    <!-- <div class="navmenu navmenu-default navmenu-fixed-left offcanvas"> -->
+    <!--- Off Canvas Side Menu -->
+    <!-- <div class="close" data-toggle="offcanvas" data-target=".navmenu">
             <span class="fa fa-close"></span>
         </div>
         <div class="add-margin"></div>
-        <ul class="nav navmenu-nav">
-            <!--- Menu -->
-            <li><a href="#home" class="page-scroll">Home</a></li>
+        <ul class="nav navmenu-nav"> -->
+    <!--- Menu -->
+    <!-- <li><a href="#home" class="page-scroll">Home</a></li>
             <li><a href="#meet-us" class="page-scroll">Overview</a></li>
             <li><a href="#services" class="page-scroll">Services</a></li>
             <li><a href="#works" class="page-scroll">Portfolio</a></li>
             <li><a href="#about-us" class="page-scroll">About Us</a></li>
             <li><a href="#contact" class="page-scroll">Contact Us</a></li>
-        </ul>
-        <!--- End Menu -->
-    </div>
+        </ul> -->
+    <!--- End Menu -->
+    <!-- </div> -->
     <!--- End Off Canvas Side Menu -->
 
     <!-- Home Section -->
     <div id="home">
         <div class="container text-center">
             <!-- Navigation -->
-            <nav id="menu" data-toggle="offcanvas" data-target=".navmenu">
+            <!-- <nav id="menu" data-toggle="offcanvas" data-target=".navmenu">
                 <span class="fa fa-bars"></span>
-            </nav>
+            </nav> -->
 
             <div class="content">
                 <h4>Hi..</h4>
@@ -88,14 +88,14 @@
                 </div>
             </div>
 
-            <a href="#meet-us" class="down-btn page-scroll">
+            <!-- <a href="#meet-us" class="down-btn page-scroll">
                 <span class="fa fa-angle-down"></span>
-            </a>
+            </a> -->
         </div>
     </div>
 
     <!-- Meet Us Section -->
-    <div id="meet-us">
+    <!-- <div id="meet-us">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
@@ -112,10 +112,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Overview Video Section -->
-    <div id="overview-video">
+    <!-- <div id="overview-video">
         <div class="overlay">
             <div class="container">
                 <a href="#">
@@ -123,10 +123,10 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Services Section -->
-    <div id="services">
+    <!-- <div id="services">
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -177,7 +177,7 @@
                 <span class="fa fa-angle-down"></span>
             </a>
         </div>
-    </div>
+    </div> -->
 
     <!-- Call-to-Action Section -->
     <!-- <div id="cta">
@@ -187,7 +187,7 @@
     </div> -->
 
     <!-- Portfolio Section -->
-    <div id="works">
+    <!-- <div id="works">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
@@ -263,12 +263,12 @@
             </div>
         </div>
         <div class="space"></div>
-        <div class="text-center">
-            <!-- <a href="#" class="btn read-more-btn">Check on Dribbble</a> -->
-            <br>
+        <div class="text-center"> -->
+    <!-- <a href="#" class="btn read-more-btn">Check on Dribbble</a> -->
+    <!-- <br>
             <a href="#about-us" class="down-btn page-scroll"><span class="fa fa-angle-down"></span></a>
         </div>
-    </div>
+    </div> -->
 
     <!-- Clients Section -->
     <!-- <div id="clients">
@@ -290,7 +290,7 @@
     </div> -->
 
     <!-- About Us Section -->
-    <div id="about-us">
+    <!-- <div id="about-us">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
@@ -359,7 +359,7 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
     <!-- Testimonial Section -->
     <!-- <div id="testimonials">
@@ -401,31 +401,37 @@
     <div id="contact">
         <div class="container">
             <div class="section-title text-center">
-                <h2>Contact Us</h2>
+                <h2>Contact Me</h2>
                 <hr>
             </div>
             <div class="space"></div>
 
             <div class="row">
                 <div class="col-md-3">
-                    <address>
-                        <strong>Address</strong><br>
-                        <br>
-                        ThemeForces.Com<br>
-                        Igbalangao, Bugasong, Anitque<br>
-                        5704, Philippines<br>
-                        Phone: (123) 456-7890
-                        <ul class="social">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
-                        </ul>
-                    </address>
+                    <!-- <address> -->
+                    <!-- <strong>Address</strong><br> -->
+                    <br>
+                    <!-- ThemeForces.Com<br>
+                    Igbalangao, Bugasong, Anitque<br>
+                    5704, Philippines<br> -->
+                    Email: madushalakruwan2nd@gmail.com
+                    <br>
+                    Phone: +94712208447
+                    <ul class="social">
+                        <li><a href="https://web.facebook.com/profile.php?id=100012604690044"><span
+                                    class="fa fa-facebook"></span></a></li>
+                        <li><a href="https://www.instagram.com/madxsha/"><span class="fa fa-instagram"></span></a>
+                        </li>
+                        <li><a href="https://twitter.com/madxsha"><span class="fa fa-twitter"></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/madusha-lakruwan/"><span
+                                    class="fa fa-linkedin"></span></a></li>
+                    </ul>
+                    <!-- </address> -->
                 </div>
 
                 <div class="col-md-9">
-                    <form autocomplete="off">
+                    <form autocomplete="off" action="mailto:madushalakruwan2nd@gmail.com" method="POST"
+                        enctype="multipart/form-data" id="emailForm">
                         <div class="row">
                             <div class="col-md-6">
                                 <input type="text" class="form-control" placeholder="Your Name">
@@ -438,7 +444,8 @@
                         </div>
                         <textarea class="form-control" rows="4" placeholder="Message"></textarea>
                         <div class="text-right">
-                            <a href="#" class="btn send-btn">Send</a>
+                            <a href="javascript:{}" onclick="document.getElementById('emailForm').submit();"
+                                class="btn send-btn">Send</a>
                         </div>
                     </form>
                 </div>
@@ -471,7 +478,7 @@
     <script>
         $(function () {
             $("#head-title").typed({
-                strings: ["I'm Madusha", "I make Mobile Applications"],
+                strings: ["I'm Madusha", "I make Mobile Apps"],
                 typeSpeed: 100,
                 loop: true,
                 startDelay: 100
