--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                 </div>
 
                 <div class="col-md-9">
-                    <form action="mailto:madushalakruwan2nd@gmail.com?subject=subject&body=body" enctype="text/plain"
-                        id="emailForm">
+                    <form action="mailto:madushalakruwan2nd@gmail.com?subject=subject&body=body" target="_blank"
+                        enctype="text/plain" id="emailForm">
                         <div class="row">
                             <div class="col-md-6">
                                 <input type="text" class="form-control" name="name" placeholder="Your Name">
